finished making the main page

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -55,12 +55,12 @@
         <aside>
           <nav class="main__sidebar sidebar">
             <div class="sidebar__menu">
-              <a
-                href="../index.html"
-                class="sidebar__list main__text active-link"
+              <a href="../index.html" class="sidebar__list main__text"
                 >Главная</a
               >
-              <a href="../pages/about_us.html" class="sidebar__list main__text"
+              <a
+                href="../pages/about_us.html"
+                class="sidebar__list main__text active-link"
                 >О районе</a
               >
               <a href="page_media/media.html" class="sidebar__list main__text"
