--- a/pages/page_media/albums/seven-album.html
+++ b/pages/page_media/albums/seven-album.html
@@ -78,65 +78,65 @@
         </aside>
         <section class="album">
           <div class="album__container">
-            <div class="album__title">Медалисты</div>
+            <div class="album__title">День социального работника</div>
             <div class="album__photos-container">
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/1.jpeg" alt="photo" />
+                  <img src="seven-album/1.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">1 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/2.jpeg" alt="photo" />
+                  <img src="six-album/2.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">2 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/3.jpeg" alt="photo" />
+                  <img src="seven-album/3.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">3 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/4.jpeg" alt="photo" />
+                  <img src="seven-album/4.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">4 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/5.jpeg" alt="photo" />
+                  <img src="seven-album/5.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">5 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/6.jpeg" alt="photo" />
+                  <img src="seven-album/6.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">6 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/7.jpeg" alt="photo" />
+                  <img src="seven-album/7.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">7 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/8.jpeg" alt="photo" />
+                  <img src="seven-album/8.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">8 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/9.jpeg" alt="photo" />
+                  <img src="seven-album/9.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">9 фото</div>
               </div>
               <div class="album__item">
                 <div class="album__photo">
-                  <img src="third-album/10.jpeg" alt="photo" />
+                  <img src="seven-album/10.jpeg" alt="photo" />
                 </div>
                 <div class="album__number">10 фото</div>
               </div>
@@ -148,16 +148,16 @@
         <div class="modal-slider__container">
           <div class="slider-wrapper">
             <div class="slider-line">
-              <img src="third-album/1.jpeg" alt="photo" />
-              <img src="third-album/2.jpeg" alt="photo" />
-              <img src="third-album/3.jpeg" alt="photo" />
-              <img src="third-album/4.jpeg" alt="photo" />
-              <img src="third-album/5.jpeg" alt="photo" />
-              <img src="third-album/6.jpeg" alt="photo" />
-              <img src="third-album/7.jpeg" alt="photo" />
-              <img src="third-album/8.jpeg" alt="photo" />
-              <img src="third-album/9.jpeg" alt="photo" />
-              <img src="third-album/10.jpeg" alt="photo" />
+              <img src="seven-album/1.jpeg" alt="photo" />
+              <img src="seven-album/2.jpeg" alt="photo" />
+              <img src="seven-album/3.jpeg" alt="photo" />
+              <img src="seven-album/4.jpeg" alt="photo" />
+              <img src="seven-album/5.jpeg" alt="photo" />
+              <img src="seven-album/6.jpeg" alt="photo" />
+              <img src="seven-album/7.jpeg" alt="photo" />
+              <img src="seven-album/8.jpeg" alt="photo" />
+              <img src="seven-album/9.jpeg" alt="photo" />
+              <img src="seven-album/10.jpeg" alt="photo" />
             </div>
           </div>
           <div class="slider-buttons">
