--- a/pages/page_media/media.html
+++ b/pages/page_media/media.html
@@ -30,7 +30,7 @@
               class="header-link"
               target="_blank"
             >
-              <img src="../img/vk-icon.svg" />
+              <img src="../../img/vk-icon.svg" />
             </a>
             <a
               href="https://www.youtube.com/channel/UClzIxca7wyUrRcF7MD9s5jg"
@@ -55,9 +55,7 @@
         <aside>
           <nav class="main__sidebar sidebar">
             <div class="sidebar__menu">
-              <a
-                href="../../index.html"
-                class="sidebar__list main__text active-link"
+              <a href="../../index.html" class="sidebar__list main__text"
                 >Главная</a
               >
               <a
@@ -65,7 +63,9 @@
                 class="sidebar__list main__text"
                 >О районе</a
               >
-              <a href="media.html" class="sidebar__list main__text">Медиа</a>
+              <a href="media.html" class="sidebar__list main__text active-link"
+                >Медиа</a
+              >
               <a href="" class="sidebar__list main__text">Проекты</a>
               <a href="" class="sidebar__list main__text">Документы</a>
             </div>
@@ -108,7 +108,7 @@
                     <div class="album__date">2021 год</div>
                   </div>
                 </a>
-                <a href="#" class="media__album">
+                <a href="albums/four-album.html" class="media__album">
                   <div class="album">
                     <div class="album__img">
                       <img src="../../img/fourth-album.jpeg" alt="cover" />
@@ -124,7 +124,7 @@
                 <h1>2020 год</h1>
               </div>
               <div class="media__album-block">
-                <a href="#" class="media__album">
+                <a href="albums/five-album.html" class="media__album">
                   <div class="album">
                     <div class="album__img">
                       <img
@@ -136,7 +136,7 @@
                     <div class="album__date">2020 год</div>
                   </div>
                 </a>
-                <a href="#" class="media__album">
+                <a href="albums/six-album.html" class="media__album">
                   <div class="album">
                     <div class="album__img">
                       <img
@@ -148,7 +148,7 @@
                     <div class="album__date">2020 год</div>
                   </div>
                 </a>
-                <a href="#" class="media__album">
+                <a href="albums/seven-album.html" class="media__album">
                   <div class="album">
                     <div class="album__img">
                       <img
@@ -162,7 +162,7 @@
                     <div class="album__date">2020 год</div>
                   </div>
                 </a>
-                <a href="#" class="media__album">
+                <a href="albums/eight-album.html" class="media__album">
                   <div class="album">
                     <div class="album__img">
                       <img
