--- a/pages/page_media/albums/first-album.html
+++ b/pages/page_media/albums/first-album.html
@@ -58,9 +58,7 @@
         <aside>
           <nav class="main__sidebar sidebar">
             <div class="sidebar__menu">
-              <a
-                href="../../../index.html"
-                class="sidebar__list main__text active-link"
+              <a href="../../../index.html" class="sidebar__list main__text"
                 >Главная</a
               >
               <a
@@ -68,7 +66,11 @@
                 class="sidebar__list main__text"
                 >О районе</a
               >
-              <a href="media.html" class="sidebar__list main__text">Медиа</a>
+              <a
+                href="../../page_media/media.html"
+                class="sidebar__list main__text active-link"
+                >Медиа</a
+              >
               <a href="" class="sidebar__list main__text">Проекты</a>
               <a href="" class="sidebar__list main__text">Документы</a>
             </div>
@@ -142,6 +144,28 @@
           </div>
         </section>
       </div>
+      <div class="modal-window">
+        <div class="modal-slider__container">
+          <div class="slider-wrapper">
+            <div class="slider-line">
+              <img src="first-album/1.jpeg" alt="photo" />
+              <img src="first-album/2.jpeg" alt="photo" />
+              <img src="first-album/3.jpeg" alt="photo" />
+              <img src="first-album/4.jpeg" alt="photo" />
+              <img src="first-album/5.jpeg" alt="photo" />
+              <img src="first-album/6.jpeg" alt="photo" />
+              <img src="first-album/7.jpeg" alt="photo" />
+              <img src="first-album/8.jpeg" alt="photo" />
+              <img src="first-album/9.jpeg" alt="photo" />
+              <img src="first-album/10.jpeg" alt="photo" />
+            </div>
+          </div>
+          <div class="slider-buttons">
+            <button class="prev-button"></button>
+            <button class="next-button"></button>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-container _container">
@@ -194,5 +218,6 @@
         </div>
       </div>
     </footer>
+    <script src="../../../js/album.js"></script>
   </body>
 </html>
