--- a/pages/page_media/media.html
+++ b/pages/page_media/media.html
@@ -66,8 +66,9 @@
               <a href="media.html" class="sidebar__list main__text active-link"
                 >Медиа</a
               >
-              <a href="" class="sidebar__list main__text">Проекты</a>
-              <a href="" class="sidebar__list main__text">Документы</a>
+              <a href="../feedback.html" class="sidebar__list main__text"
+                >Обратная связь</a
+              >
             </div>
           </nav>
         </aside>
