--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                 class="sidebar__list main__text"
                 >Медиа</a
               >
-              <a href="" class="sidebar__list main__text">Проекты</a>
-              <a href="" class="sidebar__list main__text">Документы</a>
+              <a href="pages/feedback.html" class="sidebar__list main__text"
+                >Обратная связь</a
+              >
             </div>
           </nav>
         </aside>
