--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -66,8 +66,9 @@
               <a href="page_media/media.html" class="sidebar__list main__text"
                 >Медиа</a
               >
-              <a href="" class="sidebar__list main__text">Проекты</a>
-              <a href="" class="sidebar__list main__text">Документы</a>
+              <a href="feedback.html" class="sidebar__list main__text"
+                >Обратная связь</a
+              >
             </div>
           </nav>
         </aside>
