--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/null.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" href="../css/post-style.css" />
-    <title>Новости</title>
+    <link rel="stylesheet" href="../css/feedback.css" />
+    <title>Информационный портал</title>
   </head>
   <body>
     <header class="header">
@@ -55,48 +55,72 @@
         <aside>
           <nav class="main__sidebar sidebar">
             <div class="sidebar__menu">
-              <a
-                href="../index.html"
-                class="sidebar__list main__text active-link"
+              <a href="../index.html" class="sidebar__list main__text"
                 >Главная</a
               >
               <a href="../pages/about_us.html" class="sidebar__list main__text"
                 >О районе</a
               >
-              <a href="" class="sidebar__list main__text">Медиа</a>
-              <a href="" class="sidebar__list main__text">Обратная связь</a>
+              <a
+                href="../pages/page_media/media.html"
+                class="sidebar__list main__text"
+                >Медиа</a
+              >
+              <a
+                href="feedback.html"
+                class="sidebar__list main__text active-link"
+                >Обратная связь</a
+              >
             </div>
           </nav>
         </aside>
-        <section class="main__block">
-          <div class="main__content">
-            <div class="main__img">
-              <img src="../img/news-block__first-photo.jpg" alt="news" />
+        <section class="main__container-wrapper">
+          <form class="form">
+            <h2 class="form__title">Задать вопрос</h2>
+            <div class="form__description">
+              Заполните все поля и нажмите кнопку "Отправить"
             </div>
-            <div class="main__path path">
-              <a href="../index.html" class="path__news">Новости</a>
-              <img src="../img/post-arrow.svg" alt="arrow" />
-              Каневчанка прошла обучение по повышению квалификации
+            <div class="form__field">
+              <input name="name" type="text" class="form__input" id="name" />
+              <label for="name" class="form__label">Фамилия Имя Отчество</label>
             </div>
-            <h1 class="main__title title-path">
-              Каневчанка прошла обучение по повышению квалификации в области
-              санаторно-курортного комплекса
-            </h1>
-            <p class="main__text">
-              Министерством курортов, туризма и олимпийского наследия
-              Краснодарского края проведено обучение по повышению квалификации
-              кадров санаторно-курортного и гостиничного комплекса
-              Краснодарского края. Обучение проводилось в очной форме с
-              применением дистанционных технологий за счет средств бюджета
-              Краснодарского края.
-            </p>
-            <p class="main__text">
-              От Каневского района курс повышение квалификации по программе для
-              работников службы приема и размещения (современные технологии и
-              методы) с получением соответствующего удостоверения прошла
-              Екатерина Гутко, заведующая гостиницей «Колос» (ИП Кузовлев М.А.).
-            </p>
-          </div>
+            <div class="form__field">
+              <input
+                type="text"
+                name="residence"
+                class="form__input"
+                id="residence"
+              />
+              <label for="residence" class="form__label"
+                >Место проживания (населенный пункт)</label
+              >
+            </div>
+            <div class="form__field">
+              <input type="tel" name="phone" class="form__input" id="phone" />
+              <label for="phone" class="form__label">Номер телефона</label>
+            </div>
+            <div class="form__field">
+              <input type="email" name="email" class="form__input" id="email" />
+              <label for="email" class="form__label">Электронная почта</label>
+            </div>
+            <div class="form__checkbox-field">
+              <input
+                type="checkbox"
+                name="agree"
+                class="form__checkbox"
+                id="agree"
+              />
+              <label for="agree" class="form__label"
+                >Я даю согласие на обработку моих персональных данных</label
+              >
+            </div>
+            <input
+              type="submit"
+              name="submit"
+              class="form__submit"
+              value="Отправить"
+            />
+          </form>
         </section>
       </div>
     </main>
@@ -151,5 +175,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
