--- a/pages/page_media/albums/eight-album.html
+++ b/pages/page_media/albums/eight-album.html
@@ -71,8 +71,9 @@
                 class="sidebar__list main__text active-link"
                 >Медиа</a
               >
-              <a href="" class="sidebar__list main__text">Проекты</a>
-              <a href="" class="sidebar__list main__text">Документы</a>
+              <a href="../../feedback.html" class="sidebar__list main__text"
+                >Обратная связь</a
+              >
             </div>
           </nav>
         </aside>
