--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -103,6 +103,14 @@
               <input type="email" name="email" class="form__input" id="email" />
               <label for="email" class="form__label">Электронная почта</label>
             </div>
+            <div class="form__field">
+              <textarea
+                name="textarea"
+                id="textarea"
+                class="form__textarea"
+              ></textarea>
+              <label for="textarea" class="form__label">Введите вопрос</label>
+            </div>
             <div class="form__checkbox-field">
               <input
                 type="checkbox"
