--- a/pages/page_media/albums/second-album.html
+++ b/pages/page_media/albums/second-album.html
@@ -23,8 +23,11 @@
             /></a>
 
             <span class="header__text">
-              Информационный сайт о Каневском районе для Администрации
-              Каневского сельского поселения Каневского района
+              Информационный сайт о Каневском районе
+              <span
+                >для Администрации Каневского сельского поселения Каневского
+                района</span
+              >
             </span>
           </div>
           <div class="header__contact-inform">
@@ -48,6 +51,7 @@
             >
               <img src="../../../img/ok-icon.svg" />
             </a>
+            <div class="burger-button">_</div>
           </div>
         </div>
       </div>
@@ -56,6 +60,10 @@
     <main class="main">
       <div class="main-container _container">
         <aside>
+          <div class="main__mobile-header">
+            <h2 class="main__mobile-title">Меню</h2>
+            <span class="close-icon"></span>
+          </div>
           <nav class="main__sidebar sidebar">
             <div class="sidebar__menu">
               <a href="../../../index.html" class="sidebar__list main__text"
@@ -220,5 +228,6 @@
       </div>
     </footer>
     <script src="../../../js/album.js"></script>
+    <script src="../../../js/burger-menu.js"></script>
   </body>
 </html>
